# blockchain-wallet-risk-analyser

./: .gitignore  Cargo.toml  README.md
data/: custom_risk_entities.json  risk_entities.json  sample_graph.json  service_wallets.json
src/: analysis.rs  cli.rs  errors.rs  ethereum.rs  filter.rs  lib.rs  loader.rs  main.rs  models.rs  output.rs  relationships.rs  report.rs  risk.rs  service_wallets.rs  source.rs  traversal.rs  validation.rs
