[package]
name = "blockchain-wallet-risk-analyser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
alloy = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }